Bug 366736 - Changing brushes slowly slows down Krita
Summary: Changing brushes slowly slows down Krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-13 15:45 UTC by Scott Petrovic
Modified: 2016-08-16 10:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Scott Petrovic 2016-08-13 15:45:11 UTC
It doesn't happen when you first start using Krita, but seems to happen more frequently as you change brush presets. I attached a video of the simplest steps to reproduce this.

https://youtu.be/ETipJ0_JXrM

It doesn't seem that bad, but i was doing a painting last night and quite a few times I had big smears happen across my entire canvas and artwork as I was changing brushes and trying to continue.

Reproducible: Always

Steps to Reproduce:
1. See Youtube video in description
2.
3.
Comment 1 Scott Petrovic 2016-08-13 15:47:26 UTC
skip ahead to 40 seconds of the video to see the problem begin to happen. It doesn't always happen, but seems to happen more as time goes on.
Comment 2 Dmitry Kazakov 2016-08-16 10:31:14 UTC
Yes, it seems like the number of brush connections grows with the time :(

And the brush jumping happens do to Qt handling a long delay somehow. Qt 5.6.something doesn't have this issue.
Comment 3 Dmitry Kazakov 2016-08-16 10:43:43 UTC
Git commit 430b17968e79df3fee35cf3091e48c01cbd02dc3 by Dmitry Kazakov.
Committed on 16/08/2016 at 10:43.
Pushed by dkazakov into branch 'master'.

Fix leaking connections in KisPaintOpBox

Fixes T3462

M  +6    -8    libs/ui/kis_paintop_box.cc

http://commits.kde.org/krita/430b17968e79df3fee35cf3091e48c01cbd02dc3