Fix leaking connections in KisPaintOpBox

Fixes T3462
BUG:366736